# ECE408-Applied-Parallel-Programming

./: README.md
references/: .gitignore  README.md
workspace/: .bazelrc  MODULE.bazel  README.md
workspace/02_intro_to_cuda_c/: README.md
workspace/02_intro_to_cuda_c/device_query/: BUILD  device_query.cu
workspace/02_intro_to_cuda_c/vector_add/: BUILD  generate_vectors.py  kernel.cu  kernel.hpp  main.cpp  types.hpp  utils.cpp  utils.hpp
workspace/03_cuda_parallelism/: README.md
workspace/03_cuda_parallelism/image_blur/: BUILD  kernel.cu  kernel.hpp  main.cpp
workspace/03_cuda_parallelism/rgb_to_grayscale/: BUILD  kernel.cu  kernel.hpp  main.cpp
workspace/04_memory_architecture_and_data_locality/: README.md
workspace/04_memory_architecture_and_data_locality/matrix_multiplication/: BUILD  kernel.cu  kernel.hpp  main.cpp  utils.cpp  utils.hpp
workspace/05_convolution/: README.md
workspace/05_convolution/convolution/: BUILD  kernel.cu  kernel.hpp  main.cpp  utils.cpp  utils.hpp
